--- a/taller_contenedores/docker-compose.yaml
+++ b/taller_contenedores/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - "8888:8888"
     volumes:
       - jupyter_data:/home/jovyan/work
-    command: ["jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root", "--NotebookApp.token=''", "--NotebookApp.log_level=ERROR"]
+    command: ["start-notebook.sh", "--NotebookApp.token=''"]
 
   api:
     build:
