--- a/Proyectos/Proyecto1/workspace/pyproject.toml
+++ b/Proyectos/Proyecto1/workspace/pyproject.toml
@@ -5,13 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi>=0.115.8",
-    "ipykernel>=6.29.5",
-    "ipywidgets>=8.1.5",
-    "jupyterlab>=4.3.5",
-    "numpy>=2.2.3",
-    "pandas>=2.2.3",
-    "pydantic>=2.10.6",
-    "scikit-learn>=1.6.1",
-    "uvicorn>=0.34.0",
+    "apache-beam[interactive]>=2.63.0",
+    "python-snappy>=0.7.3",
 ]
