--- a/Proyectos/Proyecto1/docker-compose.yaml
+++ b/Proyectos/Proyecto1/docker-compose.yaml
@@ -1,11 +1,11 @@
 services:
   ml-first-step:
-    build: ./proyecto
+    build: ./app
     container_name: ml_container
     ports:
       - "8888:8888"
     volumes:
-      - ./proyecto:/home/mluser/workspace:rw # Se monta el directorio de trabajo, y permisos de escritura y lectura a doble vía
+      - ./app:/home/mluser/workspace:rw # Se monta el directorio de trabajo, y permisos de escritura y lectura a doble vía
       - ml_container:/home/mluser/workspace # Se conserva el directorio de montaje del ambiente
     user: "1000:1000" # se le da permisos de usuario al contenedor
     command: ["uv", "run", "jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--NotebookApp.token=''"]
