Finalización taller mlflow

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ build/
 
 # logs 
 taller_airflow/logs/scheduler/
+taller_mlflow/minio/.minio.sys/
+taller_mlflow/JupyterLab/.ipynb_checkpoints/
+taller_mlflow/minio/mlflows3/
 
 #   carpetas julio
 taller_airflow_bu/
