--- a/taller_mlflow/docker-compose-mysql.yaml
+++ b/taller_mlflow/docker-compose-mysql.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysql:
     image: mysql:8.0
@@ -12,6 +10,7 @@ services:
       MYSQL_PASSWORD: supersecret
     ports:
       - "3306:3306"
+    command: --bind-address=0.0.0.0  # Permitir conexiones externas
     volumes:
       - ./mysql-init:/docker-entrypoint-initdb.d
       - ./mysql-init:/var/lib/mysql-files
@@ -19,3 +18,4 @@ services:
 
 volumes:
   mysql_data:
+
