--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ taller_airflow/logs/scheduler/
 taller_mlflow/minio/.minio.sys/
 taller_mlflow/JupyterLab/.ipynb_checkpoints/
 taller_mlflow/minio/mlflows3/
+taller_airflow_bu/
 
 #   carpetas julio
 taller_airflow_bu/
