--- a/Proyectos/Proyecto2/airflow/requirements.txt
+++ b/Proyectos/Proyecto2/airflow/requirements.txt
@@ -1,8 +1,8 @@
-scikit-learn==1.6.1
+scikit-learn==1.2.2
 numpy==1.26.4
 fastapi==0.88.0
 uvicorn[standard]==0.20.0
 pandas==2.2.2
-mlflow==2.10.0 
+mlflow==2.3.0
 pymysql 
-boto3
+boto3==1.26.121
