Actualización proyecto 2 mlflow

--- a/Proyectos/Proyecto2/docker-compose-p2.yaml
+++ b/Proyectos/Proyecto2/docker-compose-p2.yaml
@@ -388,9 +388,7 @@ services:
   #    - minio
 
   fast_api:
-    build:
-      context: ./app
-      dockerfile: dockerfile
+    build: ./app
     container_name: api_models
     ports:
       - "8989:8989"
