--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ taller_airflow_bu/
 taller_mlflow_bu/
 taller_dockerNetwork_bu/
 Proyectos/Proyecto2/jupyterlab/
-Proyectos/Proyecto2/Puerto 80 Cerrado.png
+"Proyectos/Proyecto2/Puerto 80 Cerrado.png"
 
 taller_mlflow/minio/.minio.sys/
 
