Inicio taller locust

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ taller_mlflow_bu/
 taller_dockerNetwork_bu/
 Proyectos/Proyecto2/jupyterlab/
 "Proyectos/Proyecto2/Puerto 80 Cerrado.png"
+taller_locust_bu/
 
 taller_mlflow/minio/.minio.sys/
 
