--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ taller_dockerNetwork_bu/
 Proyectos/Proyecto2/jupyterlab/
 "Proyectos/Proyecto2/Puerto 80 Cerrado.png"
 taller_locust_bu/
-
+taller_k8s_bu/
+taller_observabilidad_bu/
 taller_mlflow/minio/.minio.sys/
 
 
