--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ taller_mlflow/minio/
 taller_mlflow/JupyterLab/.ipynb_checkpoints/
 taller_mlflow/minio/mlflows3/
 taller_airflow_bu/
+Proyectos/Proyecto3/logs/
 
 #   carpetas julio
 taller_mlflow_bu/
