--- a/Proyectos/Proyecto3/mlflow/Dockerfile
+++ b/Proyectos/Proyecto3/mlflow/Dockerfile
@@ -1,3 +1,7 @@
 FROM ghcr.io/mlflow/mlflow:v2.10.0
 
-RUN pip install pymysql awscli boto3 cryptography
+USER root
+
+RUN pip install psycopg2-binary awscli boto3 cryptography
+
+USER 1000
