--- a/Proyectos/Proyecto3/kompose/fast-api-service.yaml
+++ b/Proyectos/Proyecto3/kompose/fast-api-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
@@ -13,6 +13,7 @@ spec:
     - name: "8989"
       port: 8989
       targetPort: 8989
+      nodePort: 30898
   selector:
     io.kompose.service: fast-api
   type: NodePort
