--- a/Proyectos/Proyecto3/kompose/grafana-deployment.yaml
+++ b/Proyectos/Proyecto3/kompose/grafana-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
@@ -16,7 +16,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+        kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
         kompose.service.type: nodeport
         kompose.version: 1.35.0 (9532ceef3)
       labels:
