--- a/Proyectos/Proyecto3/kompose/jupyter-service.yaml
+++ b/Proyectos/Proyecto3/kompose/jupyter-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
@@ -13,6 +13,7 @@ spec:
     - name: "8888"
       port: 8888
       targetPort: 8888
+      nodePort: 30888
   selector:
     io.kompose.service: jupyter
   type: NodePort
