--- a/Proyectos/Proyecto3/kompose/locust-deployment.yaml
+++ b/Proyectos/Proyecto3/kompose/locust-deployment.yaml
@@ -6,15 +6,13 @@ metadata:
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
-    io.kompose.service: jupyter
-  name: jupyter
+    io.kompose.service: locust
+  name: locust
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: jupyter
-  strategy:
-    type: Recreate
+      io.kompose.service: locust
   template:
     metadata:
       annotations:
@@ -22,12 +20,15 @@ spec:
         kompose.service.type: nodeport
         kompose.version: 1.35.0 (9532ceef3)
       labels:
-        io.kompose.service: jupyter
+        io.kompose.service: locust
     spec:
       containers:
-        - image: sebs1996/jupyter-mlops-p3:latest
-          name: jupyter
+        - env:
+            - name: LOCUST_HOST
+              value: http://inference:8989
+          image: sebs1996/locust-mlops-p3:latest
+          name: locust
           ports:
-            - containerPort: 8888
+            - containerPort: 8089
               protocol: TCP
       restartPolicy: Always
