--- a/Proyectos/Proyecto3/kompose/locust-service.yaml
+++ b/Proyectos/Proyecto3/kompose/locust-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
-    io.kompose.service: mlflow
-  name: mlflow
+    io.kompose.service: locust
+  name: locust
 spec:
   ports:
-    - name: "5000"
-      port: 5000
-      targetPort: 5000
-      nodePort: 30500 
+    - name: "8089"
+      port: 8089
+      targetPort: 8089
+      nodePort: 30808
   selector:
-    io.kompose.service: mlflow
+    io.kompose.service: locust
   type: NodePort
