--- a/Proyectos/Proyecto3/kompose/minio-deployment.yaml
+++ b/Proyectos/Proyecto3/kompose/minio-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+        kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
         kompose.service.type: nodeport
         kompose.version: 1.35.0 (9532ceef3)
       labels:
@@ -36,7 +36,7 @@ spec:
             - name: MINIO_ROOT_USER
               value: admin
           image: minio/minio
-          name: mlflow-minio
+          name: minio
           ports:
             - containerPort: 9000
               protocol: TCP
