--- a/Proyectos/Proyecto3/kompose/mlops-postgres-deployment.yaml
+++ b/Proyectos/Proyecto3/kompose/mlops-postgres-deployment.yaml
@@ -2,46 +2,46 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
-    io.kompose.service: postgres-data-store
-  name: postgres-data-store
+    io.kompose.service: mlops-postgres
+  name: mlops-postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: postgres-data-store
+      io.kompose.service: mlops-postgres
   strategy:
     type: Recreate
   template:
     metadata:
       annotations:
-        kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+        kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
         kompose.service.type: nodeport
         kompose.version: 1.35.0 (9532ceef3)
       labels:
-        io.kompose.service: postgres-data-store
+        io.kompose.service: mlops-postgres
     spec:
       containers:
         - env:
             - name: POSTGRES_DB
-              value: datadb
+              value: airflow
             - name: POSTGRES_PASSWORD
-              value: supersecret
+              value: airflow
             - name: POSTGRES_USER
-              value: admin
-          image: postgres:14
-          name: postgres-data-store
+              value: airflow
+          image: postgres:13
+          name: mlops-postgres
           ports:
             - containerPort: 5432
               protocol: TCP
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
-              name: postgres-data-store
+              name: postgres-mlflow
       restartPolicy: Always
       volumes:
-        - name: postgres-data-store
+        - name: postgres-mlflow
           persistentVolumeClaim:
-            claimName: postgres-data-store
+            claimName: postgres-mlflow
