--- a/Proyectos/Proyecto3/kompose/mlops-postgres-service.yaml
+++ b/Proyectos/Proyecto3/kompose/mlops-postgres-service.yaml
@@ -2,17 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-resto.yaml convert -o kompose/
+    kompose.cmd: C:\Program Files\Kompose\kompose.exe -f docker-compose-kubernete.yaml convert -o kompose/
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
-    io.kompose.service: postgres-data-store
-  name: postgres-data-store
+    io.kompose.service: mlops-postgres
+  name: mlops-postgres
 spec:
   ports:
     - name: "5432"
       port: 5432
       targetPort: 5432
+      nodePort: 30543
   selector:
-    io.kompose.service: postgres-data-store
+    io.kompose.service: mlops-postgres
   type: NodePort
