--- a/Proyectos/Proyecto3/kompose/prometheus-service.yaml
+++ b/Proyectos/Proyecto3/kompose/prometheus-service.yaml
@@ -13,6 +13,7 @@ spec:
     - name: "9090"
       port: 9090
       targetPort: 9090
+      nodePort: 30909
   selector:
     io.kompose.service: prometheus
   type: NodePort
