--- a/Proyectos/Proyecto3/kompose/streamlit-deployment.yaml
+++ b/Proyectos/Proyecto3/kompose/streamlit-deployment.yaml
@@ -6,15 +6,13 @@ metadata:
     kompose.service.type: nodeport
     kompose.version: 1.35.0 (9532ceef3)
   labels:
-    io.kompose.service: jupyter
-  name: jupyter
+    io.kompose.service: streamlit
+  name: streamlit
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: jupyter
-  strategy:
-    type: Recreate
+      io.kompose.service: streamlit
   template:
     metadata:
       annotations:
@@ -22,12 +20,12 @@ spec:
         kompose.service.type: nodeport
         kompose.version: 1.35.0 (9532ceef3)
       labels:
-        io.kompose.service: jupyter
+        io.kompose.service: streamlit
     spec:
       containers:
-        - image: sebs1996/jupyter-mlops-p3:latest
-          name: jupyter
+        - image: sebs1996/streamlit-mlops-p3:latest
+          name: streamlit
           ports:
-            - containerPort: 8888
+            - containerPort: 8501
               protocol: TCP
       restartPolicy: Always
