--- a/Proyectos/Proyecto3/docker-compose-resto.yaml
+++ b/Proyectos/Proyecto3/docker-compose-resto.yaml
@@ -68,7 +68,10 @@ services:
     build: ./app
     container_name: api_models
     environment:
-      MLFLOW_TRACKING_URI: http://mlflow:5000
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=supersecret
     ports:
       - "8989:8989"
     depends_on:
