--- a/Proyectos/Proyecto3/docker-compose-airflow.yaml
+++ b/Proyectos/Proyecto3/docker-compose-airflow.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 x-airflow-common:
   &airflow-common
-  image: custom-airflow:latest
+  image: sebs1996/airflow-mlops-p3:latest
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
